--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
       - LT_API_KEYS_DB_PATH=/app/db/api_keys.db
       - LT_UPDATE_MODELS=true
     volumes:
-      - ${LIBRETRANSLATE_API_KEYS:-./keys}:/app/db
-      - ${LIBRETRANSLATE_MODELS:-./models}:/home/libretranslate/.local:rw
+      - ${LIBRETRANSLATE_KEYS_FOLDER:-./keys}:/app/db
+      - ${LIBRETRANSLATE_MODELS_FOLDER:-./models}:/home/libretranslate/.local:rw
     networks:
       external:
         ipv4_address: ${LIBRETRANSLATE_IP}
