change folder to volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,12 +15,19 @@ services:
       - LT_API_KEYS=true
       - LT_API_KEYS_DB_PATH=/app/db/api_keys.db
       - LT_UPDATE_MODELS=true
+      - LANG=${LANG:-en_US.UTF-8}
     volumes:
-      - ${LIBRETRANSLATE_KEYS_FOLDER:-./keys}:/app/db
-      - ${LIBRETRANSLATE_MODELS_FOLDER:-./models}:/home/libretranslate/.local:rw
+      - keys:/app/db
+      - models:/home/libretranslate/.local:rw
     networks:
       external:
         ipv4_address: ${LIBRETRANSLATE_IP}
+
+volumes:
+  keys:
+    name: libretranslate-keys-volume
+  models:
+    name: libretranslate-models-volume
 
 networks:
   external:
